
# 收集源文件
set(SRCS
	cell.cpp
	cells.cpp
	cellapp.cpp
	cellappmgr.cpp
	cellappmgr_interface.cpp
	main.cpp
	space.cpp
	spaces.cpp
	space_viewer.cpp
)

# 创建可执行程序
add_executable(cellappmgr ${SRCS})



# link_directories(${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib)

# 链接依赖的库
target_link_libraries(cellappmgr
    PRIVATE
        server
        resmgr
        network
        thread
        common
        helper
        math
        g3dlite
        log4cxx

        debug ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/debug/lib/libaprutil-1.a
        optimized ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib/libaprutil-1.a

        debug ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/debug/lib/libapr-1.a
        optimized ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib/libapr-1.a

        debug ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/debug/lib/libexpat.a
        optimized ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib/libexpat.a

)

target_compile_definitions(cellappmgr PUBLIC  LOG4CXX_STATIC)


# ---------------- Python ----------------
include(${CMAKE_SOURCE_DIR}/cmakefile/Python.cmake)
target_link_libraries(cellappmgr PRIVATE KBE::Python)
target_link_options(cellappmgr PRIVATE -Wl,-export-dynamic)

# ---------------- OpenSSL ----------------
include(${CMAKE_SOURCE_DIR}/cmakefile/OpenSSL.cmake)
target_link_libraries(cellappmgr PRIVATE OpenSSL::SSL)


# 设置可执行文件输出目录
set_target_properties(cellappmgr PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${KBE_ROOT}/kbe/bin/server"
)