
# 收集源文件
set(SRCS
    bots.cpp
	bots_interface.cpp
	clientobject.cpp
	create_and_login_handler.cpp
	profile.cpp
	main.cpp
	pybots.cpp
	kcp_packet_receiver_ex.cpp
	kcp_packet_sender_ex.cpp
	tcp_packet_receiver_ex.cpp
	tcp_packet_sender_ex.cpp
)

# 创建可执行程序
add_executable(bots ${SRCS})


# 链接依赖的库
target_link_libraries(bots
    PRIVATE
        client_lib
        server
        resmgr
        entitydef
        network
        thread
        pyscript
        common
        helper
        math
        g3dlite
        log4cxx

        debug ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/debug/lib/libaprutil-1.a
        optimized ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib/libaprutil-1.a

        debug ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/debug/lib/libapr-1.a
        optimized ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib/libapr-1.a

        debug ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/debug/lib/libexpat.a
        optimized ${KBE_ROOT}/kbe/src/build/vcpkg_installed/x64-linux/lib/libexpat.a

)

target_compile_definitions(bots PUBLIC  LOG4CXX_STATIC)


# ---------------- Python ----------------
target_link_libraries(bots PRIVATE python_interface)
target_link_options(bots PRIVATE -Wl,-export-dynamic)

# ---------------- OpenSSL ----------------
include(${CMAKE_SOURCE_DIR}/cmakefile/OpenSSL.cmake)
target_link_libraries(bots PRIVATE OpenSSL::SSL)


# 设置可执行文件输出目录
set_target_properties(bots PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${KBE_ROOT}/kbe/bin/server"
)